--- a/src/style.css
+++ b/src/style.css
@@ -43,6 +43,7 @@
 .looseGame {
   position: absolute;
   top: 20%;
+  width: 95%;
   background: black;
   padding: 240px 250px;
 }
@@ -65,6 +66,14 @@
 .looseGame button a:hover {
   background: white;
   color: black;
+}
+
+.score {
+  position: absolute;
+  top: 5%;
+  font-size: 25px;
+  font-family: monospace;
+  color: white;
 }
 
 .cell {
